# 2021-CP490

./: .gitignore
.github/workflows/: publish.yaml
code/: .gitignore  Dockerfile  Makefile  README-deployment.md  README-engine-api.md  README-openapi.md  generate-public-schema-python.sh  requirements.txt
code/coal-common/: pyproject.toml  setup.cfg
code/coal-common/coal_common/: mixins.py  serializers.py
code/content-server/: pyproject.toml  setup.cfg
code/content-server/coal_content_server/: __main__.py  build_database.py  config.py  wsgi.py
code/content-server/coal_content_server/controllers/: item.py  room.py
code/content-server/coal_content_server/controllers/room/: __init__.py  exit.py  room.py
code/content-server/coal_content_server/models/: __init__.py  item.py  room.py
code/content-server/coal_content_server/openapi/: openapi.yaml
code/content-server/tests/: conftest.py  test_room_controller.py
code/discordbot/: setup.cfg
code/discordbot/coal_discordbot/: __main__.py
code/docker/: coal-apiserver.conf  coal-gameserver.conf  coal-playerserver.conf
code/docker/scripts/: install-packages.sh  run-all-servers.sh
code/game-server/: MANIFEST.in  pyproject.toml  setup.cfg
code/game-server/coal_game_server/: __main__.py  build_database.py  coal.db  config.py  wsgi.py
code/game-server/coal_game_server/controllers/: game.py
code/game-server/coal_game_server/controllers/game/: character.py  event.py  game.py  location.py
code/game-server/coal_game_server/controllers/game/character/: character.py  turn.py
code/game-server/coal_game_server/controllers/game/player/: character.py
code/game-server/coal_game_server/engine/: __init__.py  actions.py  common.py  conditions.py  run.py
code/game-server/coal_game_server/models/: __init__.py  game.py  location.py
code/game-server/coal_game_server/openapi/: openapi.yaml
code/game-server/tests/: conftest.py  test_event_controller.py  test_game_controller.py
code/mk/: build_number.mk  client.mk  qol.mk  server.mk  vars.mk  venv.mk  wheels.mk
code/openapi/: content-server-schema.yaml  content-server.yaml  game-server-schema.yaml  game-server.yaml  player-server-schema.yaml  player-server.yaml  public-schema-server.yaml  public-schema.yaml
code/openapi/parameters/: _index.yaml
code/openapi/requestBodies/: CharacterBody.yaml  CharacterUpdateBody.yaml  EventBody.yaml  ExitBody.yaml  GameBody.yaml  ItemBody.yaml  LocationBody.yaml  PlayerBody.yaml  RoomBody.yaml  TurnBody.yaml  _index.yaml
code/openapi/resources/: character.yaml  game-character-turns.yaml  game-characters.yaml  game-event.yaml  game-events.yaml  game-item.yaml  game-items.yaml  game-location.yaml  game-locations.yaml  game-player-characters.yaml  game-room-exit.yaml  game-room-exits.yaml  game-room.yaml  game-rooms.yaml  game.yaml  games.yaml  item.yaml  items.yaml  player-character.yaml  player-characters.yaml  player.yaml  players.yaml  room-exit.yaml  room-exits.yaml  room.yaml  rooms.yaml
code/openapi/responses/: CharacterDetailResponse.yaml  CharacterListResponse.yaml  EventDetailResponse.yaml  EventListResponse.yaml  ExitListResponse.yaml  GameDetailResponse.yaml  GameListResponse.yaml  ItemDetailResponse.yaml  ItemListResponse.yaml  LocationDetailResponse.yaml  LocationListResponse.yaml  PlayerDetailResponse.yaml  PlayerListResponse.yaml  RoomDetailResponse.yaml  RoomExitDetailResponse.yaml  RoomListResponse.yaml  TurnDetailResponse.yaml  _index.yaml
code/openapi/schemas/: ArrayOfCharacters.yaml  ArrayOfEvents.yaml  ArrayOfExits.yaml  ArrayOfGames.yaml  ArrayOfItems.yaml  ArrayOfLocations.yaml  (+30 more)
code/player-server/: MANIFEST.in  setup.cfg
code/player-server/coal_player_server/: __main__.py  build_database.py  config.py  db.py  wsgi.py
code/player-server/coal_player_server/controllers/: character.py
code/player-server/coal_player_server/controllers/game/player/: character.py
code/player-server/coal_player_server/controllers/player/: character.py  player.py
code/player-server/coal_player_server/models/: __init__.py  player.py
code/player-server/coal_player_server/openapi/: openapi.yaml
code/public-schema/: config.yaml  game-server.yaml  openapi.yaml
code/public-schema-cli/: setup.cfg  setup.py
code/public-schema-server/: setup.cfg  setup.py
code/public-schema-server/coal_public_api_server/: __main__.py  coal.db  config.py  wsgi.py
code/public-schema-server/coal_public_api_server/controllers/: game.py  turn.py
code/public-schema-server/coal_public_api_server/controllers/game/: __init__.py  event.py  game.py  item.py  location.py
code/public-schema-server/coal_public_api_server/controllers/game/character/: turn.py
code/public-schema-server/coal_public_api_server/controllers/game/player/: character.py
code/public-schema-server/coal_public_api_server/controllers/game/room/: __init__.py  exit.py  room.py
code/public-schema-server/coal_public_api_server/controllers/player/: character.py  player.py
code/public-schema-server/coal_public_api_server/openapi/: openapi.yaml
code/slackbot/: .gitignore  README.md  app.py  setup.cfg  setup.py
docker/: Dockerfile
docs/01-welcome/: doc.tex
(+28 files in other folders)
