
[metadata]
name = coal-content-server
version = 0.0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    click
    flask
    coal-common
    connexion
    flask_sqlalchemy
    flask_marshmallow
    marshmallow-sqlalchemy
    sqlalchemy < 1.4.0
    sqlalchemy_utils
    toml

[options.entry_points]
console_scripts =
    coal_content_server = coal_content_server.__main__:main
    coal_content_db_init = coal_content_server.build_database:build_database