
[metadata]
name = coal-game-server
version = 0.0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    attr
    flask
    click
    connexion
    flask_sqlalchemy
    flask_marshmallow
    marshmallow-sqlalchemy
    requests
    sqlalchemy < 1.4.0
    sqlalchemy_utils
    toml

[options.entry_points]
console_scripts =
    coal_game_server = coal_game_server.__main__:main
    coal_game_db_init = coal_game_server.build_database:build_database