
[metadata]
name = coal-player-server
version = 0.0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    click
    flask
    connexion
    flask_sqlalchemy
    flask_marshmallow
    marshmallow-sqlalchemy
    sqlalchemy < 1.4.0
    sqlalchemy_utils
    toml

[options.entry_points]
console_scripts =
    coal_player_server = coal_player_server.__main__:main
    coal_player_db_init = coal_player_server.build_database:build_database
