
[metadata]
name = coal-player-server
version = attr: coal_player_server.__version__

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    click
    coal-common
    flask
    connexion
    flask_sqlalchemy
    flask_marshmallow
    marshmallow-sqlalchemy
    sqlalchemy < 1.4.0
    sqlalchemy_utils
    toml

[options.entry_points]
console_scripts =
    coal_player_server = coal_player_server.__main__:main
    coal_player_db_init = coal_player_server.build_database:build_database
