
[metadata]
name = coal-public-api-server
version = 0.0.1

[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    flask
    connexion
    requests

[options.package_data]
    * = openapi/openapi.yaml

[options.entry_points]
console_scripts =
    coal_public_api_server = coal_public_api_server.__main__:main
